--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
     <h2>Other</h2>
     <ul>
+        <li><a href="./public/portfolio/index.html">Portfolio</a></li>
         <li><a href="./public/hobbies.html">My hobbies</a></li>
         <li><a href="./public/contact.html">Contact Me</a></li>
     </ul>
